# rag-docq

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: __init__.py  api.py  config.py  eval_ragas.py  ingest.py  llm.py  rag_chain.py  retriever.py  ui_streamlit.py
data/: eval.jsonl
