[project]
name = "rag-docq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "datasets>=4.3.0",
    "evaluate>=0.4.6",
    "faiss-cpu>=1.12.0",
    "httpx>=0.28.1",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.2",
    "langchain-ollama>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "markdown-it-py>=4.0.0",
    "openai>=2.6.1",
    "pydantic-settings>=2.11.0",
    "pypdf>=6.1.3",
    "ragas>=0.3.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.51.0",
    "tiktoken>=0.12.0",
    "unstructured>=0.18.15",
    "uvicorn[standard]>=0.38.0",
]
